--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,16 @@ body{
 }
 
 header, footer{
-    padding: 10px;
+    padding: 15px 100px 15px 100px;
     background-color: black;
     color: white;
+    display: flex;
+}
+
+header{
+    justify-content: space-between;
+}
+
+footer{
+    justify-content: center;
 }
