--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,51 @@ header{
 footer{
     justify-content: center;
 }
+
+/* form */
+
+
+input[type = 'checkbox']{
+    margin: 0px;
+    width: max-content;
+}
+
+input:not(input[type='checkbox']){
+    appearance: none;
+    width: 200px;
+    box-sizing: border-box;  
+    font: 1em sans-serif;
+    border: 1px solid #999;
+}
+
+form{
+    margin: 100px auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+form:hover{
+    transform: scale(1);
+}
+
+.form-row{
+    display: flex;
+    gap: 10px;
+}
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+
+}
+
+  
