--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body{
     display: grid;
     grid-template-rows: max-content auto max-content;
     width: 100vw;
+    position: relative;
     height: 100vh;
 }
 
@@ -87,7 +88,9 @@ input:not(input[type='checkbox']){
 form{
     z-index: 3;
     width: 400px;
- 
+    position: absolute;
+    left: 50vw;
+    top: 50vh;
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
