--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ form{
     box-sizing: border-box;
     transition: 0.5s;
     transform: scale(0);
+    background: white;
 
 }
 
@@ -117,6 +118,15 @@ label {
     text-align: right;
   }
 
+/* overlay */
+.overlay-active{
+    width: 100%;
+    height: 100%;
+    background-color: #313030;
+    opacity: 0.5;
 }
 
+.overlay{
+    position: absolute;
+}
   
