--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,13 @@ form{
     z-index: 3;
     width: 400px;
     position: absolute;
-    left: 50vw;
-    top: 50vh;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    max-height: max-content;
+    margin: auto;
+     
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
@@ -100,7 +105,8 @@ form{
     gap: 10px;
     box-sizing: border-box;
     transition: 0.5s;
-    transform: scale(0);
+    transform:  scale(0) ;
+
     background: white;
 
 }
