styling to the buttons

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ table {
 	border-spacing: 0;
 }
 
+
+
 body{
     display: grid;
     grid-template-rows: max-content auto max-content;
@@ -65,7 +67,9 @@ footer{
     justify-content: center;
 }
 
-/* form */
+form, header{
+    background-color: #e9eef1;
+}
 
 
 
@@ -78,7 +82,7 @@ input:not(input[type='checkbox']){
     appearance: none;
     width: 200px;
     box-sizing: border-box;  
-    font: 1em sans-serif;
+    font: 1rem sans-serif;
     border: 1px solid #999;
 }
 
@@ -87,7 +91,7 @@ input:not(input[type='checkbox']){
 
 form{
     z-index: 3;
-    width: 400px;
+    width: max(300px, 20vw);
     position: absolute;
     left: 0;
     top: 0;
@@ -96,7 +100,7 @@ form{
     max-height: max-content;
     margin: auto;
      
-    padding: 1em;
+    padding: 20px;
     border: 1px solid #CCC;
     border-radius: 1em;
 
@@ -107,7 +111,6 @@ form{
     transition: 0.5s;
     transform:  scale(0) ;
 
-    background: white;
 
 }
 
@@ -116,13 +119,18 @@ form{
 .form-row{
     display: flex;
     gap: 10px;
+    align-items: center;
 }
 label {
-    /* Uniform size & alignment */
     display: inline-block;
     width: 90px;
     text-align: right;
   }
+
+.align-button{
+    width: 90px;
+}
+
 
 /* overlay */
 .overlay-active{
@@ -134,5 +142,28 @@ label {
 
 .overlay{
     position: absolute;
+}
+
+/* button styling */
+input, button{
+    padding: 10px;
+}
+
+button{
+    border-radius: 20px;
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    transition: 0.3s;
+}
+
+button:hover{
+    background-color: #313030 ;
+    color: white;
+    cursor: pointer;
+}
+
+button:active{
+    transform: scale(0.9);
 }
   
