--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,8 @@ body{
 
 header, footer{
     padding: 15px 100px 15px 100px;
-    background-color: black;
-    color: white;
     display: flex;
+    align-items: center;
 }
 
 header{
@@ -67,9 +66,10 @@ footer{
     justify-content: center;
 }
 
-form, header{
+form, header, button, footer{
     background-color: #e9eef1;
 }
+
 
 
 
@@ -106,11 +106,10 @@ form{
 
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     box-sizing: border-box;
     transition: 0.5s;
     transform:  scale(0) ;
-
 
 }
 
@@ -118,17 +117,13 @@ form{
 
 .form-row{
     display: flex;
-    gap: 10px;
-    align-items: center;
+    flex-direction: column;
+    gap: 5px;
 }
-label {
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-  }
 
-.align-button{
-    width: 90px;
+.special{
+    flex-direction: row;
+    align-items: center;
 }
 
 
@@ -144,17 +139,16 @@ label {
     position: absolute;
 }
 
-/* button styling */
-input, button{
-    padding: 10px;
-}
 
 button{
-    border-radius: 20px;
+    padding: 15px;
+    border-radius: 50px;
     appearance: none;
     -webkit-appearance: none;
     border: none;
+    width: 100px;
     transition: 0.3s;
+    border: 1px solid black;
 }
 
 button:hover{
