--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,9 @@ table {
 body{
     display: grid;
     grid-template-rows: max-content auto max-content;
-    width: 100vw;
+    width: 100%;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 header, footer{
@@ -60,10 +60,12 @@ header, footer{
 
 header{
     justify-content: space-between;
+   
 }
 
 footer{
     justify-content: center;
+    
 }
 
 form, header, button, footer{
@@ -161,3 +163,33 @@ button:active{
     transform: scale(0.9);
 }
   
+
+
+.card-container{
+    display: grid;
+    padding: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    row-gap: 10px;
+    justify-items: center;
+}
+
+p{
+    word-wrap: break-word;
+}
+.card{
+    width: 200px;
+    display: grid;
+    border: 2px solid black;
+    grid-template-columns: max-content 100px;
+    gap: 30px 10px;
+    padding: 20px 40px;
+}
+
+.card>h3{
+    justify-self: end;
+}
+
+.removeBook{
+    grid-column: 1/3;
+    justify-self: end;
+}
