--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ button:active{
 .card-container{
     display: grid;
     padding: 50px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     row-gap: 10px;
     justify-items: center;
 }
