--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,11 @@ table {
 	border-spacing: 0;
 }
 
+:root{
+    --main-60: #262626;
+    --main-30: #d4d4d4;
+    --background-buttons: #a8a29e;
+}
 
 
 body{
@@ -50,6 +55,7 @@ body{
     width: 100%;
     position: relative;
     min-height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header, footer{
@@ -59,8 +65,11 @@ header, footer{
 }
 
 header{
-    justify-content: space-between;
-   
+    justify-content: space-between;  
+}
+
+h1{
+    font-size: 2rem;
 }
 
 footer{
@@ -68,8 +77,12 @@ footer{
     
 }
 
-form, header, button, footer{
-    background-color: #e9eef1;
+main{
+    background-color: var(--main-60);
+}
+
+form, header, button, footer, .card{
+    background-color: var(--main-30)
 }
 
 
@@ -161,12 +174,24 @@ button{
     width: 100px;
     transition: 0.3s;
     border: 1px solid black;
+    background-color: var(--background-buttons);
 }
 
 button:hover{
-    background-color: #313030 ;
+    background-color: var(--main-60) ;
     color: white;
     cursor: pointer;
+}
+
+button:disabled:hover{
+    cursor: not-allowed;
+    background-color: var(--background-buttons);
+}
+
+button:disabled{
+    color: black;
+    opacity: 0.5;
+    border: 1px solid red;
 }
 
 button:active{
