hover effec to card

--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,11 @@ p{
     grid-template-columns: max-content 1fr;
     gap: 30px 10px;
     padding: 5px;
+    transition: 0.3s;
+}
+
+.card:hover{
+    transform: scale(1.05);
 }
 
 .card>h3{
