--- a/styles.css
+++ b/styles.css
@@ -59,13 +59,12 @@ body{
 }
 
 header, footer{
-    padding: 15px 100px 15px 100px;
     display: flex;
     align-items: center;
+    padding: 15px 15px;
 }
-
-header{
-    justify-content: space-between;  
+header>h1{
+    flex: 1;
 }
 
 h1{
@@ -74,7 +73,6 @@ h1{
 
 footer{
     justify-content: center;
-    
 }
 
 main{
