--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body{
 header, footer{
     display: flex;
     align-items: center;
-    padding: 15px 15px;
+    padding: 1rem 1rem;
 }
 header>h1{
     flex: 1;
@@ -113,7 +113,7 @@ form{
     max-height: max-content;
     margin: auto;
      
-    padding: 20px;
+    padding: 1rem;
     border: 1px solid #CCC;
     border-radius: 1em;
 
@@ -163,7 +163,7 @@ form{
 
 
 button{
-    padding: 15px;
+    padding: 1rem;
     border-radius: 50px;
     appearance: none;
     -webkit-appearance: none;
@@ -215,7 +215,7 @@ p{
     border: 2px solid black;
     grid-template-columns: max-content 1fr;
     gap: 30px 10px;
-    padding: 5px;
+    padding: 1rem;
     transition: 0.3s;
 }
 
